<resources>
    <string name="app_name">EZWeight</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="ข้อมูลผู้ใช้">ข้อมูลผู้ใช้</string>
    <string name="คำนวณ">คำนวณ</string>
    <string name="ท่าออกกำลังกายที่เหมาะสม">ท่าออกกำลังกายที่เหมาะสม</string>
    <string name="คำนวณดัชนีมวลกาย">ดัชนีมวลกาย</string>
    <string name="คำนวณเปอร์เซ็นต์ไขมันในร่างกาย">เปอร์เซ็นต์ไขมันในร่างกาย</string>
    <string name="น้ำหนักที่เหมาสมกับส่วนสูง">น้ำหนักที่เหมาสมกับส่วนสูง</string>
    <string name="พลังงานที่ต้องการในแต่ละวัน">พลังงานที่ต้องการเพื่อใช้ในแต่ละวัน</string>

    <string name="รูปร่าง">รูปร่าง</string>

    <array name="gender">
        <item>ชาย</item>
        <item>หญิง</item>
    </array>

    <!-- TODO: Dialog -->
    <string name="สำเร็จ">สำเร็จ</string>
    <string name="คุณได้สร้างโปรไฟล์แล้ว">คุณได้สร้างโปรไฟล์แล้ว</string>
    <string name="คุณได้อัพเดทโปรไฟล์แล้ว">คุณได้อัพเดทโปรไฟล์แล้ว</string>
    <string name="OK">OK</string>
    <string name="spaceofname">   </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: ForSuggets_itemActivity -->

    <!-- TODO: DetailActivity -->
    <string name="M_MainGroup">กล้ามเนื้อหลักที่ทำงาน</string>
    <string name="M_SecondGroup">กล้ามเนื้อรองที่ทำงาน</string>
    <string name="Equipment">อุปกรณ์ที่เหมาะสม</string>
    <string name="Posture">การจัดท่า</string>
    <string name="M_Contraction">การโฟกัสกล้ามเนื้อ</string>
    <string name="RepSet">จำนวณครั้ง/รอบ</string>
    <string name="RestTime">เวลาพัก/รอบ</string>

</resources>
