<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChestDetailActivity">

    <LinearLayout
        android:id="@+id/ShowDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/gif_view"
            android:layout_width="wrap_content"
            android:layout_height="230dp"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/txtExerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple2"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/Detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/headerM_MainGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="4dp"
                    android:layout_marginTop="3dp"
                    android:background="@color/defaultcolor"
                    android:textColor="@color/แดงแจ๊"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/M_MainGroup"
                    android:gravity="left"/>

                <TextView
                    android:id="@+id/txtShowM_MainGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="4dp"/>

                <TextView
                    android:id="@+id/headerM_SecondGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="4dp"
                    android:background="@color/defaultcolor"
                    android:text="@string/M_SecondGroup"
                    android:textColor="@color/green1"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/txtShowM_SecondGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="4dp"/>

                <TextView
                    android:id="@+id/headerEquipment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="4dp"
                    android:background="@color/defaultcolor"
                    android:textColor="@color/black_semi_transparent"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/Equipment"/>

                <TextView
                    android:id="@+id/txtShowEquipment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="4dp" />

                <TextView
                    android:id="@+id/headerPosture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="4dp"
                    android:background="@color/defaultcolor"
                    android:textColor="@color/black_semi_transparent"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/Posture"/>

                <TextView
                    android:id="@+id/txtShowPosture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="4dp"/>

                <TextView
                    android:id="@+id/headerContraction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="4dp"
                    android:background="@color/defaultcolor"
                    android:textColor="@color/black_semi_transparent"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/M_Contraction"/>

                <TextView
                    android:id="@+id/txtShowM_Contraction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="4dp"/>

                <TextView
                    android:id="@+id/headerRepSet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="4dp"
                    android:background="@color/defaultcolor"
                    android:textColor="@color/black_semi_transparent"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/RepSet"/>

                <TextView
                    android:id="@+id/txtShowRepSet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="4dp"/>

                <TextView
                    android:id="@+id/headerRestTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="4dp"
                    android:background="@color/defaultcolor"
                    android:textColor="@color/black_semi_transparent"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/RestTime"/>

                <TextView
                    android:id="@+id/txtShowRestTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="4dp"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>